Выполнил задания из темы "Подключение библиотек"